--- a/api/package.json
+++ b/api/package.json
@@ -32,5 +32,8 @@
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
     "supertest": "^7.1.1"
+  },
+  "devDependencies": {
+    "jest": "^30.0.3"
   }
 }
