--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,12 @@ on: [pull_request]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    
+    services:
+      mongodb:
+        image: mongo:6.0
+        ports:
+          - 27017:27017
     strategy:
       matrix:
         node-version: [24]
@@ -25,14 +31,16 @@ jobs:
       - name: 🧑‍🔬 Run backend tests
         working-directory: api
         env:
-          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          MONGODB_URL: mongodb://localhost:27017/test
           NODE_ENV: ${{ secrets.NODE_ENV }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-        run: npm test
+        run: |
+          echo "MongoDB URL is set: $([[ -n "$MONGODB_URL" ]] && echo "YES" || echo "NO")"
+          npm test
       
       - name: 📦 Install frontend dependencies
         working-directory: frontend
